package baseline;

public class CreateTaskObject {
    //this function is called whenever there are changes made or a new Task is created
    //a function that will take in the fields and create a new object to return to TaskView
    public Object createTask(){
        //create an instance of taskFields
        //populate the object from the taskFields
        //return the object back to the ControllerTaskView
        return null;
    }
}
