package baseline;

public class PopulateTaskView {
    //this class will populate the task view with the correct fields
    public void populateTaskView(Object object){
        //this function will take in an object and start populating the fields
        //create an instance of the taskViewController
        //with the returned object get each column id
        //with each column id call the getters for TaskView populate the taskView
    }
}
