package baseline;

public class SaveTask {
    //this class will be called for editTask or newTask
    public void saveChanges(){
        //create an instance of TaskFields for operations
        //when the save button is pressed the class should store all the task Fields inside an object
        //it should also update ToDoItem list with all the toDoItems
        //the class will return the object to taskViewController to add the values in the proper columns
        //the functions will call the populateTaskView
    }
}
