package baseline;

public class SaveTaskApp {
    //this function will save the current ToDoList
    //create a function that will save the currentToDoList in the proper location
    public void saveCurrentList(){
        //instantiate the fileChooser class
        //set the required properties
        //invoke the showSaveDialog method
        //add the file chooser to a root node
        //add the root node to the scene object
        //create an if statement to check if the file is not null
    }
}
