package baseline;

public class SaveToDoEdit {
    //this function is called by the save button on the editToDoItem fxml
    public Object updateToDoItem(){
        //create an instance of toDoItem
        //set the value from the field to the new string
        //return the string back to processEditItem
        //update the current toDoList with the proper field
        //return the object
        return null;
    }
}
