package baseline;

public class SetEditItem {
    //detect double mouse click from editTaskTableView
    //the tableView will call this function
    //create function
    public void handleMouseClick(){
        //create an if statement for mouseEvent
        //if mouseEvent.getClickCount is equal to 2
        //call a function to set the stage for editItem
        //call a function to save the new Text from
        //take the returned value from SaveToDoEdit and update the listView
    }

    //create a function to set the stage for editItem
    public void setEditItemStage(){
        //then set the stage for the editItem fxml
        //create a parent root
        //attach scene graph to scene
        //display in window's title bar
        //attach scene to stage
        //display the stage
        //call the ProcessEditItem
    }
}
