package baseline;

public class SetEditTask {
    //this class is to set up the scene for editTask
    //create a function to set up scene
    public void startEditTaskScene(){
        //create a parent root
        //attach scene graph to scene
        //display in window's title bar
        //attach scene to stage
        //display the stage
    }
}
